--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <div class="about">
      <div class="about-author">
        <br>
-      <img src="C:\Users\lea20\Desktop\Cours_Mimo\blog\img\me1.jpg">
+      <img src="lefean.github.io/me1.jpg">
     </div> <!--about-author-->
      <h1 class="about-title">About me</h1>
      <div class="about-content">
