--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <div class="about">
      <div class="about-author">
        <br>
-      <img src="lefean.github.io/me1.jpg">
+      <img src="https://pbs.twimg.com/profile_images/665469223909654529/72v6baQL_400x400.jpg">
     </div> <!--about-author-->
      <h1 class="about-title">About me</h1>
      <div class="about-content">
